Added some dev/prod ergonomics

--- a/prod.cfg
+++ b/prod.cfg
@@ -1,2 +1,4 @@
 SECRET_KEY = '967fe107-a6cc-427a-8a38-552434ee9327'
 SERVER_NAME = '164.90.225.163:80'
+SOCKETIO_SERVER_NAME = '164.90.225.163'
+SOCKETIO_PORT = 80
