--- a/dev.cfg
+++ b/dev.cfg
@@ -1,2 +1,4 @@
 SECRET_KEY = b'_5#1@L&14SDz\n\xec]/'
-SERVER_NAME = 'localhost:5000'
+SERVER_NAME = '127.0.0.1:5000'
+SOCKETIO_SERVER_NAME = '127.0.0.1'
+SOCKETIO_PORT = 5000
